--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,7 @@ async function submitForm() {
 
     // 入力チェック
     if (!formData.name || !formData.phone || !formData.selectedSymptom || !formData.dates) {
-        hideLoadingSpinner(); // 入力不備時もスピナー消す
+        setTimeout(hideLoadingSpinner, 800); // ← 少し遅らせて自然に
         if (!formData.name) { alert('お名前を入力してください。'); return; }
         if (!formData.phone) { alert('電話番号を入力してください。'); return; }
         if (!formData.selectedSymptom) { alert('メニューを選択してください。'); return; }
@@ -1274,7 +1274,7 @@ async function submitForm() {
         alert('予約が埋まりました。別の日時をお選びください。');
         availabilityCache = {}; // キャッシュリセット
         await fetchAvailability(currentDate); // カレンダー更新
-        hideLoadingSpinner();
+        setTimeout(hideLoadingSpinner, 800);
         return;
     }
 
@@ -1285,12 +1285,15 @@ async function submitForm() {
             text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
         }]);
         alert('当日キャンセルは無いようにお願いいたします。');
-        liff.closeWindow();
+        // ✅ スピナーを少し残してから閉じる
+        setTimeout(() => {
+            hideLoadingSpinner();
+            liff.closeWindow();
+        }, 1000);
     } catch (err) {
         console.error('メッセージ送信エラー:', err);
         alert('メッセージの送信に失敗しました。');
-    } finally {
-        hideLoadingSpinner(); // 送信完了・失敗後どちらでもスピナーを消す
+        setTimeout(hideLoadingSpinner, 1000);
     }
 }
 
