--- a/index.html
+++ b/index.html
@@ -654,8 +654,8 @@
         }
 
         button:hover {
-            background-color: #2cb7d5;
-            transform: scale(1.05);
+            background-color: #ffffff;
+            transform: scale(1.00);
         }
 
         .submit-button {
